Changed conn strings

--- a/src/SimplCommerce.WebHost/appsettings.json
+++ b/src/SimplCommerce.WebHost/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=kutagawa69;Host=localHost;Port=5432;Database=test;Pooling=true;"
+    "DefaultConnection": ""
   },
   "Authentication": {
     "Facebook": {
