--- a/src/SimplCommerce.WebHost/appsettings.docker.json
+++ b/src/SimplCommerce.WebHost/appsettings.docker.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=kutagawa69;Host=localHost;Port=5432;Database=test;Pooling=true;"
+    "DefaultConnection": "User ID=postgres;Password=postgres;Host=simpldb;Port=5432;Database=simplcommerce;Pooling=true;"
   },
   "Authentication": {
     "Facebook": {
