change db back to mssql

--- a/src/SimplCommerce.WebHost/appsettings.Development.json
+++ b/src/SimplCommerce.WebHost/appsettings.Development.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "data source=.;user=sa;password=Qwe12345;initial catalog=simplcommerce;"
   }
 }
