Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,11 +31,8 @@ jobs:
       arguments:  '--logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=[xunit.*]*%2c[System.*]*'
       projects: 'test/**/*.csproj'
       nobuild: true
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: 'publish'
-      publishWebProjects: true
-      arguments: './SimplCommerce.sln'
+  - script: dotnet build ./SimplCommerce.sln --configuration Release
+    displayName: 'dotnet publish'
   - task: DotNetCoreCLI@2
     inputs:
       command: custom
@@ -49,3 +46,9 @@ jobs:
     inputs:
       codeCoverageTool: Cobertura
       summaryFileLocation: $(Build.SourcesDirectory)/coverlet/reports/Cobertura.xml  
+      
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: '$(Build.Repository.LocalPath)\src\SimplCommerce.WebHost\bin\Release\net6.0\'
+      ArtifactName: 'drop'
+      publishLocation: 'Container'
